# DropBot

./: .gitignore  CMakeLists.txt  Daemonizer.cpp  Daemonizer.h  Daemonlizer.cpp  Daemonlizer.h  README.md  SampleDaemon.cpp  SampleDaemon.h  SignalHandler.cpp  SignalHandler.h  dropbot.md  main.cpp
Daemonizer/: Daemonizer.cpp  Daemonizer.h  InstanceStrategy.h  MultipleInstancePidStrategy.cpp  MultipleInstancePidStrategy.h  PidInstanceStrategy.cpp  PidInstanceStrategy.h  SingleInstancePidStrategy.cpp  SingleInstancePidStrategy.h
